# iced-cashu

./: Cargo.toml  flake.nix
src/: config.rs  main.rs
